Initial Dashboard Changes

--- a/app/src/main/res/values/blueprint_setup.xml
+++ b/app/src/main/res/values/blueprint_setup.xml
@@ -5,7 +5,7 @@
         True, means yes.
         False, means no.
     -->
-    <bool name="with_drawer_texts">true</bool>
+    <bool name="with_drawer_texts">false</bool>
 
     <!--
         Show a custom image as placeholder while loading icons
@@ -26,7 +26,7 @@
         Do you want the app to read the icons from res/xml/drawable.xml ? (true)
         Or do you prefer the icons to be loaded from res/values/icon_pack.xml ? (false)
     -->
-    <bool name="xml_drawable_enabled">false</bool>
+    <bool name="xml_drawable_enabled">true</bool>
 
     <!--
         Set to true if your icon pack includes adaptive icons. false otherwise
