--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -32,5 +32,6 @@
     <item drawable="reddit"/>
     <item drawable="amazon"/>
     <item drawable="whatsapp_dym"/>
+    <item drawable="browser_dym"/>
 
 </resources>
