Add 4 Icons, Bump Version, Rename Roles

--- a/app/src/main/res/values/about_setup.xml
+++ b/app/src/main/res/values/about_setup.xml
@@ -13,8 +13,8 @@
     </string-array>
 
     <string-array name="credits_descriptions">
-        <item>Designer</item>
-        <item>App Dev, Designer</item>
+        <item>Dev, Designer</item>
+        <item>Core Dev, Designer</item>
         <item>Designer</item>
     </string-array>
 
