--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -36,4 +36,5 @@
     <item drawable="libretube"/>
     <item drawable="terminal2_dym"/>
     <item drawable="material_terminal"/>
+    <item drawable="googletranslate_dym"/>
 </resources>
